--- a/login.html
+++ b/login.html
@@ -19,11 +19,16 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <!-- <div class="alert alert-danger text-center" role="alert"> -->
+        <!--<h4 class="alert-heading">Funcionalidad en desarrollo</h4>-->
+       <div>
+        <h1>Login</h1>
+        <input id="username" type="text" placeholder="Usuario">
+        <input id="password" type="password">
+        <button onclick=comprobar() >Ingresar</button>
+      </div>
       </div>
     </div>
-  </main>
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
