--- a/products.html
+++ b/products.html
@@ -36,11 +36,8 @@
       </div>
     </div>
   </nav>
-  <main class="pb-5 container">
+  <main class="pb-5 container" id="container">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
     </div>
   </main>
   <footer class="text-muted">
