Le dimos forma a la seccion de productos

--- a/login.html
+++ b/login.html
@@ -19,13 +19,11 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <!-- <div class="alert alert-danger text-center" role="alert"> -->
-        <!--<h4 class="alert-heading">Funcionalidad en desarrollo</h4>-->
        <div>
         <h1>Login</h1>
         <input id="username" type="text" placeholder="Usuario">
-        <input id="password" type="password">
-        <button onclick=comprobar() >Ingresar</button>
+        <input id="password" type="password" placeholder="Contraseña">
+        <button onclick=comprobar()>Ingresar</button>
       </div>
       </div>
     </div>
