Terminamos la primera entrega

--- a/login.html
+++ b/login.html
@@ -20,7 +20,6 @@
   <main class="mt-5">
     <div class="container login__container">
           <h1 class="h3 mb-3 fw-normal">Iniciar sesion</h1>
-      
           <div class="form-floating">
             <input type="text" class="form-control" id="username" placeholder="Usuario">
             <label for="floatingInput">Usuario</label>
@@ -35,7 +34,7 @@
               <input type="checkbox" value="remember-me"> Recordarme?
             </label>
           </div>
-          <button class="w-100 btn btn-lg btn-primary" onclick=comprobar()>Ingresar</button>
+          <button class="w-100 btn btn-lg btn-primary" id="comprobar" onclick=comprobar()>Ingresar</button>
           <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
           
   <footer class="text-muted">
