--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
   <main class="pb-5 container" id="container">
     <div class="container" id="container__products">
       <h1>Productos</h1>
-      <h4>Veras aqui todos los productos de la categoría <b>Autos</b></h4>
+      <h4>Veras aqui todos los productos de la categoría <b id="nombreCategoria"></b></h4>
     </div>
   </main>
   <footer class="text-muted">
