Le agregue funcionalidad al boton de ordenar por relevancia

--- a/products.html
+++ b/products.html
@@ -52,7 +52,7 @@
             <input type="radio" class="btn-check" name="options" ><i class="fas fa-sort-amount-up mr-1"></i>
           </label>
 
-          <label class="btn btn-light" id="sortByCount">
+          <label class="btn btn-light" id="sortBySold">
             <input type="radio" class="btn-check" name="options"  checked><i class="fas fa-sort-amount-down mr-1"></i>Rel.
           </label>
         </div>
