Arreglamos la funcion de cambiar de categoria

--- a/products.html
+++ b/products.html
@@ -31,6 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <p class="nav-link" id="displayUsuario"></p>
           </li>
         </ul>
       </div>
@@ -52,8 +53,8 @@
             <input type="radio" class="btn-check" name="options" ><i class="fas fa-sort-amount-up mr-1"></i>
           </label>
 
-          <label class="btn btn-light" id="sortBySold">
-            <input type="radio" class="btn-check" name="options"  checked><i class="fas fa-sort-amount-down mr-1"></i>Rel.
+          <label class="btn btn-light" >
+            <input type="radio" class="btn-check" name="options" checked id="sortBySold"><i class="fas fa-sort-amount-down mr-1"></i>Rel.
           </label>
         </div>
         <div id="container"></div>
