--- a/cart.html
+++ b/cart.html
@@ -29,8 +29,9 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-          </li>
+            <li class="nav-item">
+              <p class="nav-link" id="displayUsuario"></p>
+            </li>
         </ul>
       </div>
     </div>
