--- a/product-info.html
+++ b/product-info.html
@@ -31,6 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <p class="nav-link" id="displayUsuario"></p>
           </li>
         </ul>
       </div>
