--- a/sell.html
+++ b/sell.html
@@ -30,6 +30,7 @@
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <p class="nav-link" id="displayUsuario"></p>
           </li>
         </ul>
       </div>
