--- a/categories.html
+++ b/categories.html
@@ -40,7 +40,7 @@
   <main class="pb-5">
     <div class="text-center p-4">
       <h2>Categorías</h2>
-      <p class="lead">Verás aquí todas las categorías del sitio.</p>
+      <h4>Verás aquí todas las categorías del sitio.</h4>
     </div>
     <div class="container">
       <div class="row">
