Agregamos la funcionalidad de hacer click a los productos para que te muestre su informacion

--- a/product-info.html
+++ b/product-info.html
@@ -38,10 +38,25 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+    <br>
+    <div class="container" id='container'>
+      <h1 id="nombre" class="nombreProducto"></h1>
+      <hr>
+      <b>Precio</b>
+      <p id="precio"></p>
+      <b>Descripción</b>
+      <p id="descripcion"></p>
+      <b>Categoría</b>
+      <p id="categoria"></p>
+      <b>Cantidad de vendidos</b>
+      <p id="vendidos"></p>
+      <b>Imágenes ilustrativas</b>
+    <div class="contenedorImagenes">
+      <img src="" id="img1" class="img">
+      <img src="" id="img2" class="img">
+      <img src="" id="img3" class="img">
+      <img src="" id="img4" class="img">
+    </div>
     </div>
   </main>
   <footer class="text-muted">
