Agregamos la seccion de comentarios

--- a/product-info.html
+++ b/product-info.html
@@ -57,6 +57,11 @@
       <img src="" id="img3" class="img">
       <img src="" id="img4" class="img">
     </div>
+    <br>
+    <div>
+      <h2>Comentarios</h2>
+      <div id="cajaComentarios"></div>
+    </div>
     </div>
   </main>
   <footer class="text-muted">
