--- a/product-info.html
+++ b/product-info.html
@@ -62,7 +62,6 @@
       <h2>Comentarios</h2>
       <div id="cajaComentarios"></div>
       <h2>Comentar</h2>
-      <form>
         <div class="row">
           <div class="col-md-6 mb-3">
             <label for="commentDescription">Tu opinion: </label>
@@ -84,9 +83,8 @@
             </div>
             <br>
             <div>
-            <button class="btn btn-primary">Enviar</button>
+            <button class="btn btn-primary" onclick="comentarioValido()">Enviar</button>
           </div>
-      </form>
     </div>
     </div>
   </main>
