--- a/sell.html
+++ b/sell.html
@@ -30,7 +30,14 @@
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <p class="nav-link" id="displayUsuario"></p>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle"  style="background-color: transparent;" type="button" id="displayUsuario" data-bs-toggle="dropdown" aria-expanded="false"></button>
+              <ul class="dropdown-menu" aria-labelledby="displayUsuario">
+                <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
+                <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+                <li><a class="dropdown-item" href="login.html" onclick="logout()">Cerrar sesión</a></li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
