terminamos el puntos 1 y 3 de la entrega 4

--- a/product-info.html
+++ b/product-info.html
@@ -51,11 +51,37 @@
       <b>Cantidad de vendidos</b>
       <p id="vendidos"></p>
       <b>Imágenes ilustrativas</b>
-    <div class="contenedorImagenes">
-      <img src="" id="img1" class="img">
-      <img src="" id="img2" class="img">
-      <img src="" id="img3" class="img">
-      <img src="" id="img4" class="img">
+   <div class="contenedorImagenes">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="" class="d-block"  id="img1">
+          </div>
+          <div class="carousel-item">
+            <img src="" class="d-block"  id="img2">
+          </div>
+          <div class="carousel-item">
+            <img src="" class="d-block"  id="img3">
+          </div>
+          <div class="carousel-item">
+            <img src="" class="d-block"  id="img4">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
     <br>
     <div>
@@ -85,6 +111,18 @@
             <div>
             <button class="btn btn-primary" onclick="comentarioValido()">Enviar</button>
           </div>
+    </div>
+    <hr>
+    <b>Productos relacionados:</b>
+    <div class="contenedorRelacionados">
+      <div class="relacionados">
+        <img src="" id="imgRelacionado1" class="img">
+        <p id="nombreRelacionado1"></p>
+      </div>
+      <div class="relacionados">
+        <img src="" id="imgRelacionado2" class="img">
+        <p id="nombreRelacionado2"></p>
+      </div>
     </div>
     </div>
   </main>
