Arreglamos mas cositas

--- a/product-info.html
+++ b/product-info.html
@@ -124,11 +124,11 @@
     <hr>
     <b>Productos relacionados:</b>
     <div class="contenedorRelacionados">
-      <div class="relacionados">
+      <div class="relacionados" onclick='redirigirRelacionado(1)'>
         <img src="" id="imgRelacionado1" class="img">
         <p id="nombreRelacionado1"></p>
       </div>
-      <div class="relacionados">
+      <div class="relacionados" onclick='redirigirRelacionado(2)'>
         <img src="" id="imgRelacionado2" class="img">
         <p id="nombreRelacionado2"></p>
       </div>
