Quite codigo que no tenia funcionalidad

--- a/product-info.html
+++ b/product-info.html
@@ -37,7 +37,7 @@
               <ul class="dropdown-menu" aria-labelledby="displayUsuario">
                 <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
                 <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
-                <li><a class="dropdown-item" href="login.html" onclick="logout()">Cerrar sesión</a></li>
+                <li><a class="dropdown-item" href="login.html" onclick="localStorage.clear()">Cerrar sesión</a></li>
                 <li><i class="bi bi-brightness-high-fill" id="toggleDark"></i></li>
               </ul>
             </div>
