--- a/cart.html
+++ b/cart.html
@@ -44,10 +44,38 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+    <div class="container-carrito">
+      <h1>Carrito De Compras</h1>
+      <h4>Articulos a comprar</h4>
+      <div class="carrito">
+      <table id="tabla-articulos">
+        <tr>
+          <th></th>
+          <th>Nombre</th>
+          <th>Costo</th>
+          <th>Cantidad</th>
+          <th>Subtotal</th>
+        </tr>
+      </table>
+    </div>
+    <div id="tipodeenvio">
+      <h2>Tipo de envío</h2>
+
+        <input type="radio" name="envio" id="enviopremium"> Premium 2 a 5 dias (15%) 
+        <br>
+        <input type="radio" name="envio" id="envioexpress"> Express 5 a 8 dias (7%)
+        <br>
+        <input type="radio" name="envio" id="enviostandar"> Standard 12 a 15 dias (5%)
+        <br><br>
+  </div>
+
+  <div id="datosdeenvio">
+      <h2>Dirección de envío</h2>
+
+        <input type="text" id="calle" placeholder="Calle"> 
+        <input type="text" id="numero" placeholder="Numero"> 
+        <input type="text" id="esquina" placeholder="Esquina">
+  </div>
     </div>
   </main>
   <footer class="text-muted">
