Terminamos el desafiate de la entrega 5

--- a/cart.html
+++ b/cart.html
@@ -47,8 +47,8 @@
     <div class="container-carrito">
       <h1>Carrito De Compras</h1>
       <h4>Articulos a comprar</h4>
-      <div class="carrito">
-      <table id="tabla-articulos">
+      <div class="table-responsive">
+      <table id="tabla-articulos" class="table">
         <tr>
           <th></th>
           <th>Nombre</th>
@@ -100,3 +100,5 @@
 </body>
 
 </html>
+
+
