--- a/login.html
+++ b/login.html
@@ -18,30 +18,31 @@
 
 <body>
   <main class="mt-5">
-    <div class="container login__container">
-          <h1 class="h3 mb-3 fw-normal">Iniciar sesion</h1>
-          <div class="form-floating">
-            <input type="text" class="form-control" id="username" placeholder="Usuario">
-            <label for="floatingInput">Usuario</label>
-          </div>
-          <div class="form-floating">
-            <input type="password" class="form-control" id="password" placeholder="Contraseña">
-            <label for="floatingPassword">Contraseña</label>
-          </div>
-      
-          <div class="checkbox mb-3">
-            <label>
-              <input type="checkbox" value="remember-me"> Recordarme?
-            </label>
-          </div>
-          <button class="w-100 btn btn-lg btn-primary" id="comprobar" onclick=comprobar()>Ingresar</button>
-          <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
-          
+    <div class="login-container">
+        <div class="row">
+            <div class="col-md-3 offset-md-4 text-center mx-auto">
+                <h1 class="h3 mb-3 fw-normal">Iniciar sesión</h1>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="username" placeholder="Usuario">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" id="password" placeholder="Contraseña">
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="remember-me">
+                        <label class="form-check-label" for="remember-me">Recordarme</label>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-block" id="comprobar" onclick="comprobar()">Ingresar</button>
+            </div>
+        </div>
+    </div>
+</main>
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
         <a href="#">Volver arriba</a>
       </p>
+      <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
       <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
     </div>
   </footer>
