--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                         <input type="password" class="form-control" id="password" placeholder="Contraseña">
                     </div>
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="remember-me">
+                        <input type="checkbox" class="form-check-label" id="remember-me">
                         <label class="form-check-label" for="remember-me">Recordarme</label>
                     </div>
                     <button type="button" class="btn btn-primary btn-block" id="comprobar" onclick="comprobar()">Ingresar</button>
