--- a/product-info.html
+++ b/product-info.html
@@ -63,7 +63,7 @@
       <b>Cantidad de vendidos</b>
       <p id="vendidos"></p>
       <b>Imágenes ilustrativas</b>
-   <div class="contenedorImagenes">
+   <div>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -73,16 +73,16 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="" class="d-block"  id="img1">
+            <img src="" class="d-block w-100" id="img1">
           </div>
           <div class="carousel-item">
-            <img src="" class="d-block"  id="img2">
+            <img src="" class="d-block w-100" id="img2">
           </div>
           <div class="carousel-item">
-            <img src="" class="d-block"  id="img3">
+            <img src="" class="d-block w-100" id="img3">
           </div>
           <div class="carousel-item">
-            <img src="" class="d-block"  id="img4">
+            <img src="" class="d-block w-100" id="img4">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -96,7 +96,7 @@
       </div>
     </div>
     <br>
-    <div>
+    <div class="col-sm-12">
       <h2>Comentarios</h2>
       <div id="cajaComentarios"></div>
       <h2>Comentar</h2>
@@ -126,13 +126,13 @@
     </div>
     <hr>
     <b>Productos relacionados:</b>
-    <div class="contenedorRelacionados">
+    <div class="col-sm-12 col-md-8 d-flex">
       <div class="relacionados" onclick='redirigirRelacionado(1)'>
-        <img src="" id="imgRelacionado1" class="img">
+        <img src="" id="imgRelacionado1" class="img-fluid w-100">
         <p id="nombreRelacionado1"></p>
       </div>
       <div class="relacionados" onclick='redirigirRelacionado(2)'>
-        <img src="" id="imgRelacionado2" class="img">
+        <img src="" id="imgRelacionado2" class="img-fluid w-100">
         <p id="nombreRelacionado2"></p>
       </div>
     </div>
