Terminamos la primera parte de la entrega 6

--- a/cart.html
+++ b/cart.html
@@ -1,104 +1,252 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>eMercado - Todo lo que busques está aquí</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
+      rel="stylesheet"
+    />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>eMercado - Todo lo que busques está aquí</title>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
-          </li>
-          <li class="nav-item">
-            <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle"  style="background-color: transparent;" type="button" id="displayUsuario" data-bs-toggle="dropdown" aria-expanded="false"></button>
-              <ul class="dropdown-menu" aria-labelledby="displayUsuario">
-                <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
-                <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
-                <li><a class="dropdown-item" href="login.html" onclick="logout()">Cerrar sesión</a></li>
-              </ul>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
+      <div class="container">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav w-100 justify-content-between">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="categories.html">Categorías</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sell.html">Vender</a>
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <button
+                  class="btn btn-secondary dropdown-toggle"
+                  style="background-color: transparent"
+                  type="button"
+                  id="displayUsuario"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                ></button>
+                <ul class="dropdown-menu" aria-labelledby="displayUsuario">
+                  <li>
+                    <a class="dropdown-item" href="cart.html">Mi carrito</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="my-profile.html"
+                      >Mi perfil</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="login.html"
+                      onclick="logout()"
+                      >Cerrar sesión</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <div class="container-carrito">
+        <h1>Carrito De Compras</h1>
+        <h4>Articulos a comprar</h4>
+        <div class="table-responsive">
+          <table id="tabla-articulos" class="table">
+            <tr>
+              <th></th>
+              <th>Nombre</th>
+              <th>Costo</th>
+              <th>Cantidad</th>
+              <th>Subtotal</th>
+            </tr>
+          </table>
+        </div>
+        <div id="tipodeenvio">
+          <h2>Tipo de envío</h2>
+          <input
+            type="radio"
+            name="envio"
+            id="enviopremium"
+            value="0.15"
+            onclick="recalcular()"
+          />
+          Premium 2 a 5 dias (15%)
+          <br />
+          <input
+            type="radio"
+            name="envio"
+            id="envioexpress"
+            value="0.07"
+            onclick="recalcular()"
+          />
+          Express 5 a 8 dias (7%)
+          <br />
+          <input
+            type="radio"
+            name="envio"
+            id="enviostandar"
+            value="0.05"
+            onclick="recalcular()"
+          />
+          Standard 12 a 15 dias (5%) <br /><br />
+        </div>
+        <div id="datosdeenvio">
+          <h2>Dirección de envío</h2>
+          <input type="text" id="calle" placeholder="Calle" />
+          <input type="text" id="numero" placeholder="Numero" />
+          <input type="text" id="esquina" placeholder="Esquina" />
+        </div>
+        <h2>Costos</h2>
+        <div class="list-group container col-8">
+          <div class="row list-group-item">
+            <div class="col">
+              <div class="d-flex w-100 justify-content-between">
+                <h4 class="mb-1">Subtotal</h4>
+                <p class="text-muted" id="subtotal"></p>
+              </div>
+              <p class="mb-1">Costo unitario del producto por cantidad</p>
             </div>
-          </li>
-        </ul>
+          </div>
+          <div class="row list-group-item">
+            <div class="col">
+              <div class="d-flex w-100 justify-content-between">
+                <h4 class="mb-1">Costo de envio</h4>
+                <p class="text-muted" id="envio"></p>
+              </div>
+              <p class="mb-1">Segun el tipo de envio</p>
+            </div>
+          </div>
+          <div class="row list-group-item">
+            <div class="col">
+              <div class="d-flex w-100 justify-content-between">
+                <h4 class="mb-1">Total ($)</h4>
+                <b class="text-muted" id="total">24</b>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div>
+          <h2>Forma de pago</h2>
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#Modal"
+          >
+            Seleccionar
+          </button>
+          <div
+            class="modal fade"
+            id="Modal"
+            tabindex="-1"
+            aria-labelledby="ModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">
+                    Forma de pago
+                  </h5>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <input type="radio" name="" id="" value="" />
+                  Tarjeta de credito
+                  <hr />
+                  <div class="row">
+                    <div class="col-8">
+                      <p>Numero de tarjeta</p>
+                      <input type="text" class="form-control" />
+                    </div>
+                    <div class="col-4">
+                      <p>Codigo de seg.</p>
+                      <input type="text" class="form-control" />
+                    </div>
+                    <div class="col-8">
+                      <p>Vencimiento (MM/AA)</p>
+                      <input type="date" class="form-control" />
+                    </div>
+                  </div>
+                  <input type="radio" name="" id="" value="" />
+                  Transferencia bancaria
+                  <hr>
+                  <div class="row">
+                    <div class="col-8">
+                      <p>Numero de cuenta</p>
+                      <input type="text" class="form-control" />
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                    Cerrar
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="text-muted">
+      <div class="container">
+        <p class="float-end">
+          <a href="#">Volver arriba</a>
+        </p>
+        <p>
+          Este sitio forma parte de
+          <a href="https://jovenesaprogramar.edu.uy/" target="_blank"
+            >Jovenes a Programar</a
+          >
+        </p>
+      </div>
+    </footer>
+    <div id="spinner-wrapper">
+      <div class="lds-ring">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
     </div>
-  </nav>
-  <main>
-    <div class="container-carrito">
-      <h1>Carrito De Compras</h1>
-      <h4>Articulos a comprar</h4>
-      <div class="table-responsive">
-      <table id="tabla-articulos" class="table">
-        <tr>
-          <th></th>
-          <th>Nombre</th>
-          <th>Costo</th>
-          <th>Cantidad</th>
-          <th>Subtotal</th>
-        </tr>
-      </table>
-    </div>
-    <div id="tipodeenvio">
-      <h2>Tipo de envío</h2>
-
-        <input type="radio" name="envio" id="enviopremium"> Premium 2 a 5 dias (15%) 
-        <br>
-        <input type="radio" name="envio" id="envioexpress"> Express 5 a 8 dias (7%)
-        <br>
-        <input type="radio" name="envio" id="enviostandar"> Standard 12 a 15 dias (5%)
-        <br><br>
-  </div>
-
-  <div id="datosdeenvio">
-      <h2>Dirección de envío</h2>
-
-        <input type="text" id="calle" placeholder="Calle"> 
-        <input type="text" id="numero" placeholder="Numero"> 
-        <input type="text" id="esquina" placeholder="Esquina">
-  </div>
-    </div>
-  </main>
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-end">
-        <a href="#">Volver arriba</a>
-      </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
-    </div>
-  </footer>
-  <div id="spinner-wrapper">
-    <div class="lds-ring">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/init.js"></script>
-  <script src="js/cart.js"></script>
-</body>
-
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/init.js"></script>
+    <script src="js/cart.js"></script>
+  </body>
 </html>
-
-
