--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 <body>
   <main class="mt-5">
     <div class="login-container">
-        <div class="row">
+        <div class="row w-100">
             <div class="col-md-3 offset-md-4 text-center mx-auto">
                 <h1 class="h3 mb-3 fw-normal">Iniciar sesión</h1>
                     <div class="form-group">
