--- a/product-info.html
+++ b/product-info.html
@@ -50,8 +50,8 @@
     <br>
     <div class="container" id='container'>
       <div id="divTitulo">
-      <h1 id="nombre" class="nombreProducto"></h1>
-      <input class="btn btn-primary text-right" type="button" value="Comprar" id='comprar' onclick="comprarProducto()">
+        <h1 id="nombre" class="nombreProducto"></h1>
+        <input class="btn btn-primary" type="button" value="Comprar" id='comprar' onclick="comprarProducto()">
       </div>
       <hr>
       <b>Precio</b>
