--- a/products.html
+++ b/products.html
@@ -65,9 +65,9 @@
           </label>
         </div>
         <div class="row">
-          <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
+          <div class="col-lg-12 col-md-12 mb-1 container">
             <div class="row container p-0 m-0">
-              <div class="col" id="colNombre">
+              <div class="col-md-4 col-sm-12">
                 <input class="form-control" type="search" placeholder="Nom." id="nombre">
               </div>
               <div class="col">
@@ -79,7 +79,7 @@
               <div class="col">
                 <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
               </div>
-              <div class="col-3 p-0">
+              <div class="col-md-3 col-sm-12 p-0">
                 <div class="btn-group" role="group">
                   <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
                   <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
