--- a/cart.html
+++ b/cart.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
@@ -68,6 +69,7 @@
                       >Cerrar sesión</a
                     >
                   </li>
+                  <li><i class="bi bi-brightness-high-fill" id="toggleDark"></i></li>
                 </ul>
               </div>
             </li>
