Cambie el color del fondo oscuro

--- a/my-profile.html
+++ b/my-profile.html
@@ -65,6 +65,7 @@
       <br>
       <div>
         <h1>Perfil</h1>
+        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png " width="250px" id="userImage">
       </div>
       <br>
       <hr>
@@ -105,6 +106,10 @@
                <label for="userNumber">Telefono</label>
                <input type="text" class="form-control" id="userNumber" value="" name="userNumber">
              </div>
+             <div class="col-md-12 col-sm-12 col-lg-6 mb-3">
+              <label for="userImageFile" class="form-label"></label>
+              <input class="form-control" type="file" id="userImageFile" accept="image/*">
+            </div> 
         </div>
       <br>
       <br>
