--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </div>
   </nav>
   <main>
-    <div class="jumbotron text-center"></div>
-    <div class="album py-5 bg-light">
+    <div class="jumbotron text-center" id="jumbotron"></div>
+    <div class="album py-5" id="album">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
