Terminamos la entrega 7

--- a/my-profile.html
+++ b/my-profile.html
@@ -107,6 +107,7 @@
                <input type="text" class="form-control" id="userNumber" value="" name="userNumber">
              </div>
              <div class="col-md-12 col-sm-12 col-lg-6 mb-3">
+              <label for="userImageFile">Imagen de perfil</label>
               <label for="userImageFile" class="form-label"></label>
               <input class="form-control" type="file" id="userImageFile" accept="image/*">
             </div> 
