--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
             <div class="col-md-3 offset-md-4 text-center mx-auto">
                 <h1 class="h3 mb-3 fw-normal">Iniciar sesión</h1>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="username" placeholder="Usuario">
+                        <input type="text" class="form-control" id="email" placeholder="E-mail">
                     </div>
                     <div class="form-group">
                         <input type="password" class="form-control" id="password" placeholder="Contraseña">
