--- a/products.html
+++ b/products.html
@@ -90,7 +90,8 @@
             </div>
           </div>
         </div>
-        <div id="container"></div>
+        <div id="container">
+        </div>
   </main>
   <footer class="text-muted">
     <div class="container">
