Mejore el modo oscuro de la pagia inicio

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div class="row">
-          <a class="btn btn-light btn-lg btn-block" href="categories.html">Y mucho más!</a>
+          <a class="btn btn-light btn-lg btn-block" href="categories.html" id="botonMas">Y mucho más!</a>
         </div>
       </div>
     </div>
